<resources>
    <string name="app_name">ContinentApp</string>
    <string name="empezar">¡Empezar!</string>
    <string name="confirmar">Confirmar</string>
    <string name="jugadores">Jugadores</string>
    <string name="numero_jugadores">X jugadores</string>
    <string name="jugador_celda_recycler">Jugador/a</string>
    <string name="nombre_jugador">Nombre de jugador/a</string>
    <string name="listado_jugadores_resumen">Listado de jugadores</string>
    <string name="jugar">¡A jugar!</string>
    <string name="siguiente">Siguiente</string>
    <string name="clave_partida">Partida</string>
    <string name="numero_ronda">Número de ronda</string>
    <string name="jugada">Jugada - Número de cartas</string>
    <string name="puntuacion">Puntuación</string>
    <string name="contadorPuntuacion">0</string>
    <string name="nombre">Nombre</string>
    <string name="resumen">Resumen por rondas</string>
    <string name="ganador">Ganador/a</string>
</resources>